# Sentinel-RAG

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/embeddings/: embedder.py  vector_store.py
app/ingestion/: chunking.py  pdf_text_extractor.py
app/llm/: output.py
app/retrieval/: retriever.py
app/security/PID/: regex_detector.py
app/utils/: logger.py
tests/: rag_test.py
vector_store/: index.faiss  index.pkl
