[project]
name = "sentinelrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
